# pybvh

./: CMakeLists.txt  LICENSE  pybvh.cpp
include/: box.h  bvh.h  bvh_query.h  closest_point.h  ray_intersection.h  vector.h
src/: bvh.cpp  bvh_query.cpp  closest_point.cpp  ray_intersection.cpp  vector.cpp
